Select colors and responsive alignment fix margin around prices

--- a/sass/base/elements/_fields.scss
+++ b/sass/base/elements/_fields.scss
@@ -27,18 +27,18 @@ textarea {
 }
 
 label {
-	color: darken($color__gray, 20%);
+	color: darken($color__gray, 40%);
 	margin-right: 1em;
 	display: block;
 }
 
 select {
-	border: 1px solid $color__border-input;
+	border: 2px solid $color__border-input;
 	font-size: 0.8em;
 	background-color: $color__background-button;
-	padding: 0.4em;
+	padding: 0.8em;
 	color: lighten($color__text-input, 30%);
-	border-radius: 5px;
+	border-radius: 2px;
 }
 
 .select2-container .select2-selection--single {
